@@ -1,2 +1,23 @@
-# mono-bazel
+# Mono Bazel
+
 Mono Repository with Bazel
+
+## Getting Started
+
+Install bazel with bazelisk
+
+```
+$ curl -Lo bazelisk https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64
+$ chmod u+x bazelisk
+$ sudo mv bazelisk /usr/local/bin/bazel
+$ bazel version
+
+Bazelisk version: v1.20.0
+WARNING: Invoking Bazel in batch mode since it is not invoked from within a workspace (below a directory having a WORKSPACE file).
+OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
+Build label: 7.2.1
+Build target: @@//src/main/java/com/google/devtools/build/lib/bazel:BazelServer
+Build time: Tue Jun 25 15:53:05 2024 (1719330785)
+Build timestamp: 1719330785
+Build timestamp as int: 1719330785
+```
